[project]
name = "etl-backup-cloud"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitor Justiniano",email = "vitor.mjustiniano@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3 (>=1.43.48,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

